minikube/global-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: global-ingress
  namespace: demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: hello.3.80.219.212.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: java-hello-world
                port:
                  number: 80
    - host: ads.3.80.219.212.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ads-java-demo
                port:
                  number: 80
